--- a/RunCoin/StroyBoards/Base.lproj/Main.storyboard
+++ b/RunCoin/StroyBoards/Base.lproj/Main.storyboard
@@ -151,13 +151,13 @@
                                 <rect key="frame" x="33" y="128" width="309" height="138"/>
                                 <string key="text">Enter your email and hit send. You'll receive a confirmation email and from there, you can reset your password to your RunCoin account. Its as easy as that!</string>
                                 <fontDescription key="fontDescription" name="SFProText-Regular" family="SF Pro Text" pointSize="17"/>
-                                <color key="textColor" red="0.33725490200000002" green="0.43529411759999997" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.59215686270000001" green="0.61568627450000002" blue="0.6588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password Reset" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kn9-Se-jJZ">
                                 <rect key="frame" x="33" y="107" width="242" height="25.5"/>
                                 <fontDescription key="fontDescription" name="SFProText-Semibold" family="SF Pro Text" pointSize="21"/>
-                                <color key="textColor" red="0.59215686270000001" green="0.61568627450000002" blue="0.6588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.33725490200000002" green="0.43529411759999997" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -825,6 +825,7 @@
                         <outlet property="mapView" destination="qtA-ob-g52" id="LCU-dw-iyH"/>
                         <outlet property="paceLabel" destination="OHo-aD-Lsc" id="xSC-cM-dAY"/>
                         <outlet property="resumeButton" destination="Bc5-5g-GBd" id="Uzy-aq-e19"/>
+                        <outlet property="runCoinLabel" destination="SNO-uS-ph1" id="TGE-br-u2m"/>
                         <outlet property="saveButton" destination="CJ8-Z1-H1o" id="CkG-er-OFq"/>
                         <outlet property="stopButton" destination="5pU-F9-giS" id="Xar-fB-NQZ"/>
                         <outlet property="timeDurationLabel" destination="PyN-T8-Rzq" id="yQr-HH-4Gq"/>
@@ -835,7 +836,7 @@
             </objects>
             <point key="canvasLocation" x="5006" y="1101"/>
         </scene>
-        <!--Profile Feed View Controller-->
+        <!--Item-->
         <scene sceneID="gSF-tT-mPC">
             <objects>
                 <viewController id="g2p-PJ-owc" customClass="ProfileFeedViewController" customModule="RunCoin" customModuleProvider="target" sceneMemberID="viewController">
@@ -1101,7 +1102,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="020-d6-ZpP"/>
                     </view>
-                    <navigationItem key="navigationItem" id="1bz-rb-ZpZ"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="2Gg-7Y-YNE"/>
+                    <navigationItem key="navigationItem" id="dVL-mh-L8a">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="SEu-PU-M09">
+                            <connections>
+                                <segue destination="OKC-jT-STT" kind="show" identifier="GoToUserSettings" id="a2v-gS-KMR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="aggregateDistanceLabel" destination="VKs-gu-0PA" id="g6j-M4-h1j"/>
                         <outlet property="aggregateDurationLabel" destination="pDO-Su-7eC" id="cxI-2X-wiN"/>
@@ -1118,13 +1127,13 @@
         <!--Account View Controller-->
         <scene sceneID="oeB-Mx-IVk">
             <objects>
-                <viewController id="OKC-jT-STT" customClass="AccountViewController" customModule="RunCoin" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="OKC-jT-STT" customClass="AccountViewController" customModule="RunCoin" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vNR-zJ-OPQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="799"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gry-Fk-Vkh">
-                                <rect key="frame" x="0.0" y="64" width="375" height="686"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="735"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HcN-gq-VqS">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="695"/>
@@ -1197,7 +1206,7 @@
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3RU-Q9-9nQ" userLabel="Image Stack View">
-                                                <rect key="frame" x="122" y="61" width="130" height="130"/>
+                                                <rect key="frame" x="121" y="61" width="130" height="130"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8tf-wY-rWL">
                                                         <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
@@ -1406,7 +1415,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BA3-5T-oVn" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="AY0-S8-xqp" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4037.5999999999999" y="2798.9505247376314"/>
+            <point key="canvasLocation" x="4838" y="1948"/>
         </scene>
         <!--Search Friends View Controller-->
         <scene sceneID="ktw-71-YKg">
@@ -1515,7 +1524,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jZ4-9I-9Mh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4068" y="3693.1034482758623"/>
+            <point key="canvasLocation" x="4068" y="2764"/>
         </scene>
         <!--Run Stats View Controller-->
         <scene sceneID="cv8-ga-VlB">
@@ -1730,7 +1739,6 @@
                     <connections>
                         <segue destination="k4Z-Wb-t4U" kind="relationship" relationship="viewControllers" id="pHe-1Z-DOX"/>
                         <segue destination="sRQ-oM-IT9" kind="relationship" relationship="viewControllers" id="FA2-IU-SXz"/>
-                        <segue destination="sU9-4N-Bdd" kind="relationship" relationship="viewControllers" id="dAg-QP-GWj"/>
                         <segue destination="2r1-9O-wnM" kind="relationship" relationship="viewControllers" id="FWL-Vp-XSh"/>
                     </connections>
                 </tabBarController>
@@ -1756,25 +1764,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T39-G5-mDc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3129" y="1889"/>
-        </scene>
-        <!--Profile-->
-        <scene sceneID="WRf-tj-tsm">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sU9-4N-Bdd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" image="profileUnselected" selectedImage="profileSelectedCopy" id="Kqc-sa-NV7"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mPt-qF-TNH">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="OKC-jT-STT" kind="relationship" relationship="rootViewController" id="zap-9w-tlT"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BjL-Dn-98G" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3129" y="2758"/>
         </scene>
         <!--Run-->
         <scene sceneID="PAw-w6-jIM">
@@ -1812,7 +1801,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sfR-GG-EFB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3129" y="3694"/>
+            <point key="canvasLocation" x="3129" y="2764"/>
         </scene>
     </scenes>
     <resources>
@@ -1823,12 +1812,10 @@
         <image name="drop-shadow-divider" width="375" height="15"/>
         <image name="gradientOutlines" width="30" height="30"/>
         <image name="gradientOutlinesUnselected" width="30" height="30"/>
-        <image name="profileSelectedCopy" width="29" height="29"/>
-        <image name="profileUnselected" width="29" height="29"/>
         <image name="runCoinLogo" width="235" height="235"/>
         <image name="runCoinRing_profile" width="35" height="35"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="zkE-Qh-bDn"/>
+        <segue reference="JvV-79-9Bh"/>
     </inferredMetricsTieBreakers>
 </document>
