--- a/RunCoin/StroyBoards/Base.lproj/Main.storyboard
+++ b/RunCoin/StroyBoards/Base.lproj/Main.storyboard
@@ -1206,7 +1206,7 @@
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3RU-Q9-9nQ" userLabel="Image Stack View">
-                                                <rect key="frame" x="121" y="61" width="130" height="130"/>
+                                                <rect key="frame" x="122.5" y="61" width="130" height="130"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8tf-wY-rWL">
                                                         <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
@@ -1336,7 +1336,7 @@
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Ik0-xz-JMW">
-                                                <rect key="frame" x="172" y="202" width="30" height="29"/>
+                                                <rect key="frame" x="172.5" y="202" width="30" height="29"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GEZ-WQ-cgX">
                                                         <rect key="frame" x="0.0" y="0.0" width="30" height="29"/>
@@ -1746,11 +1746,13 @@
             </objects>
             <point key="canvasLocation" x="2189.5999999999999" y="1100.5997001499252"/>
         </scene>
-        <!--Activity-->
+        <!--Navigation Controller-->
         <scene sceneID="VWy-5b-aQT">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="k4Z-Wb-t4U" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Activity" image="activityUnselected" selectedImage="activitySelectedCopy" id="sjM-Vj-msu"/>
+                    <tabBarItem key="tabBarItem" title="" image="activityUnselected" selectedImage="activitySelectedCopy" id="sjM-Vj-msu">
+                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cci-qe-FfS">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -1765,11 +1767,13 @@
             </objects>
             <point key="canvasLocation" x="3129" y="1889"/>
         </scene>
-        <!--Run-->
+        <!--Navigation Controller-->
         <scene sceneID="PAw-w6-jIM">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sRQ-oM-IT9" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Run" image="gradientOutlinesUnselected" selectedImage="gradientOutlines" id="x14-QL-sbt"/>
+                    <tabBarItem key="tabBarItem" title="" image="gradientOutlinesUnselected" selectedImage="gradientOutlines" id="x14-QL-sbt">
+                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OK3-HA-m6B">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
